<resources>
    <string name="app_name">Assistify</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password? Reset Here.</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered? Login</string>
    <string name="not_member">Not yet a member? Register Here!</string>
    <string name="or">Or</string>
    <string name="google_signin">Sign In With Google</string>
    <string name="google_logo">Google Logo</string>
    <string name="already_member">Already a member? Login</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="forename">Forename:</string>
    <string name="surname">Surname:</string>
    <string name="terms_conditions">I have read and accept the Terms and Conditions.</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member? Login Here!</string>
    <string name="logout">Logout</string>
    <string name="userid">User ID : %1$s</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="account">Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset">Reset</string>
    <string name="long_terms">These terms and conditions outline the rules and regulations for the use of Assistify, accessible via the Google Play Store.\n \nBy accessing this application, we assume you accept these terms and conditions in full. Do not continue to use Assistify if you do not accept all of the terms and conditions stated on this page.\n \nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements:\n \n’Client’, ‘You’ and ‘Your’ refers to you, the person using this application and compliant to the Company’s terms and conditions.\n \n’The Company’, ‘Ourselves’, ‘We’, ‘Our’ and ‘Us’, refers to our Company. ‘Party’, ‘Parties’, or ‘Us’, refers to both the Client and ourselves.\n \nAll terms refer to the offer, acceptance, and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of United Kingdom .Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.\n \nLicense:\nUnless otherwise stated, Assistify and/or its licensors own the intellectual property rights for all material on Assistify. All intellectual property rights are reserved. You may access this from Assistify for your own personal use subjected to restrictions set in these terms and conditions.\n \nYou must not:\n - Republish material from Assistify\n - Sell, rent or sub-license material from Assistify\n - Reproduce, duplicate or copy material from Assistify\n - Redistribute content from Assistify\n \nThis Agreement shall begin on the date hereof.\n \nHyperlinking to our Content:\nThe following organizations may link to our Applicaiton without prior written approval:\n - Government agencies\n - Search engines\n - News organizations\n - Online directory distributors may link to our Applicaiton in the same manner as they hyperlink to the Applicaitons of other listed businesses\n - System wide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.\nThese organizations may link to our home page, to publications or to other Applicaiton information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and © fits within the context of the linking party’s site.\n \nReservation of Rights:\nWe reserve the right to request that you remove all links or any particular link to our Applicaiton. You approve to immediately remove all links to our Applicaiton upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Applicaiton, you agree to be bound to and follow these linking terms and conditions.\n \nRemoval of links from our applicaiton:\n If you find any link on our Applicaiton that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly.\n \nWe do not ensure that the information on this applicaiton is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the applicaiton remains available or that the material on the applicaiton is kept up to date.\n \n Disclaimer: \nTo the maximum extent permitted by applicable law, we exclude all representations, warranties, and conditions relating to our applicaiton and the use of this applicaiton. Nothing in this disclaimer will:\n - limit or exclude our or your liability for death or personal injury\n - limit or exclude our or your liability for fraud or fraudulent misrepresentation \n - limit any of our or your liabilities in any way that is not permitted under applicable law\n – Or exclude any of our or your liabilities that may not be excluded under applicable law.\n \nThe limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.\n \nAs long as the applicaiton and the information and services on the applicaiton are provided free of charge, we will not be liable for any loss or damage of any nature.</string>
    <string name="health_connect_intro">Assistify integrates seamlessly with Health Connect, the Google Local Storage API. Through this integration, users can effortlessly access vital information about their health metrics, such as heart rate, steps taken, and sleep patterns. To function Assistify requires certain permissions to be accepted within the Health Connect App, you can remove these permissions at any time.</string>
    <string name="weclome_message">Welcome To Assistify</string>
    <string name="intructions">Intructions</string>
    <string name="installation_instructions">Assistify uses data collected from your smart watch. If you have not done so already, please pair your smart watch to your phone, by following the installation instructions provided by the manufacturer. Assistify can read the data of any device compatible with Health Connect, please refer to your owners manual for compatibility.</string>
    <string name="intro_text">"Our mission is to seamlessly integrate smart devices and adaptive controls into a user-friendly mobile application. With real-time monitoring capabilities, we empower caregivers to watch over vulnerable care-recipients, alerting them to any potential hazards. This app is designed to offer peace of mind to both caregivers and care-recipients, enhancing independence while ensuring safety."</string>
    <string name="default_web_client_id">"69959552127-6rugs773fjdua9bdtclle5hhgqknbmbl.apps.googleusercontent.com"</string>
</resources>