<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"/>

        <TextView
            android:id="@+id/uid_from_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/firstname_from_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname"/>


        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>

    </LinearLayout>


</RelativeLayout>